--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,48 @@ h2 {
 .social-media i {
   margin-left: 10px;
 }
+
+/*----Media Queries----*/
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+    background: url("../images/bg-mobile.svg") no-repeat hsl(257, 40%, 49%);
+    overflow-x: hidden;
+  }
+
+  img.brand {
+    width: 100px;
+    margin-left: 35px;
+  }
+
+  .illustrator-img {
+    width: 100%;
+    margin: 0 auto;
+    padding: 30px 32px;
+  }
+
+  .community {
+    width: 100%;
+    padding: 15px 32px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .community .btn {
+    padding: 2px 40px;
+  }
+
+  .social-media {
+    float: none;
+    text-align: center;
+  }
+
+  .social-media i {
+    font-size: medium;
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+}
